src/css/custom.css
/**
 * TrguiNG - next gen remote GUI for transmission torrent daemon
 * Copyright (C) 2023  qu1ck (mail at qu1ck.org)
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

html,
body {
    width: 100%;
    height: 100%;
    overflow: hidden;
    font-size: 0.9em;
}

svg,
img {
    vertical-align: middle;
}

.split-horizontal {
    display: flex;
    flex-direction: row;
    height: 100%;
}

.split-vertical {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.gutter {
    background-repeat: no-repeat;
    background-position: 50%;
}

.gutter.gutter-horizontal {
    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
    cursor: col-resize;
}

.gutter.gutter-vertical {
    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
    cursor: row-resize;
}

.scrollable {
    position: relative;
    overflow: auto;
    height: 100%;
    width: 100%;
}

.scrollable>* {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
}

.statusbar>* {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.filters>* {
    border-width: 0px 0px 1px 0px;
    border-style: solid;
    border-color: #999;
    cursor: pointer;
}

.selected {
    background-color: rgb(50, 80, 170);
    color: white;
}

.list-delete-icon {
    height: initial;
    width: initial;
    min-height: initial;
    min-width: initial;
    display: none;
}

button[data-hovered="true"] .list-delete-icon {
    display: block;
}

